add buttons in header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Udemy pure.css</title>
+    <!-- import google icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
@@ -11,18 +14,24 @@
       <div class="pure-g">
         <div class="pure-u-2-24"><img class="pure-img" src="images\logo-coral.svg"/></div>
         <div class="pure-u-2-24 pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-            <a href="#" id="menuLink1" class="pure-menu-link">Categories</a>
+            <a href="#" id="menuLink1" class="pure-menu-link"><i class="material-icons">view_module</i>Categories</a>
             <ul class="pure-menu-children">
               <li class="pure-menu-item"><a href="#" class="pure-menu-link">Email</a></li>
               <li class="pure-menu-item"><a href="#" class="pure-menu-link">Twitter</a></li>
               <li class="pure-menu-item"><a href="#" class="pure-menu-link">Tumblr Blog</a></li>
             </ul>
         </div>
-        <div class="pure-u-10-24"><p>Thirds</p></div>
-        <div class="pure-u-2-24"><p>Thirds</p></div>
-        <div class="pure-u-1-24"><p>Thirds</p></div>
-        <div class="pure-u-2-24"><p>Thirds</p></div>
-        <div class="pure-u-2-24"><p>Thirds</p></div>
+        <div class="pure-u-2-24"></div>
+        <div class="pure-u-8-24">
+          <form class="pure-form">
+            <input class="pure-input-1" type="text" placeholder="recherche">
+          </form>
+        </div>
+        <div class="pure-u-2-24"></div>
+        <div class="pure-u-2-24 button-container"><button class="pure-button formateur">Formateur</button></div>
+        <div class="pure-u-1-24 button-container"><button class="pure-button shopping"><i class="material-icons">local_grocery_store</i></button></div>
+        <div class="pure-u-2-24 button-container"><button class="pure-button sign-in">sign in</button></div>
+        <div class="pure-u-2-24 button-container"><button class="pure-button sign-up">sign up</button></div>
       </div>
     </header>
   </body>
