add primary image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
   <body>
 
     <header>
@@ -22,9 +23,9 @@
             </ul>
         </div>
         <div class="pure-u-2-24"></div>
-        <div class="pure-u-8-24">
-          <form class="pure-form">
-            <input class="pure-input-1" type="text" placeholder="recherche">
+        <div class="pure-u-8-24 form-container">
+          <form class="pure-form taille-form">
+            <input class="pure-input-1" type="text" placeholder="chercher un cours">
           </form>
         </div>
         <div class="pure-u-2-24"></div>
@@ -34,5 +35,19 @@
         <div class="pure-u-2-24 button-container"><button class="pure-button sign-up">sign up</button></div>
       </div>
     </header>
+
+    <div class="foot-image">
+      <div class="pure-u-1-3 foot-text">
+        <h1>Ouvrez votre compteur avec des cours au prix de 9,99 € </h1>
+        <h2>Profitez de notre meilleur prix sur les cours : à partir de 9,99 € </h2>
+        <form class="pure-form taille-form">
+          <input class="pure-input-1" type="text" placeholder="Que souhaitez vous apprendre ?">
+        </form>
+    </div>
+    <div class="">
+
+    </div>
+    </div>
+
   </body>
 </html>
