--- a/index.html
+++ b/index.html
@@ -37,16 +37,39 @@
     </header>
 
     <div class="foot-image">
+      <div class="pure-u-1-24">
+
+      </div>
       <div class="pure-u-1-3 foot-text">
         <h1>Ouvrez votre compteur avec des cours au prix de 9,99 € </h1>
         <h2>Profitez de notre meilleur prix sur les cours : à partir de 9,99 € </h2>
         <form class="pure-form taille-form">
           <input class="pure-input-1" type="text" placeholder="Que souhaitez vous apprendre ?">
         </form>
+      </div>
     </div>
-    <div class="">
-
-    </div>
+    <div class="gradient">
+      <div class="content">
+        <i class="material-icons medium">radio_button_checked</i>
+        <p>
+          <b>65 000 cours en ligne</b><br/>
+          Explorez une variété de sujets d'actualité
+        </p>
+      </div>
+      <div class="content">
+        <i class="material-icons medium">query_builder</i>
+        <p>
+          <b>Cours donnés par des experts</b><br/>
+          Trouvez le formateur qui vous correspond
+        </p>
+      </div>
+      <div class="content">
+        <i class="material-icons medium">restore</i>
+        <p>
+          <b>Accès illimité</b><br/>
+          Apprenez à votre rythme
+        </p>
+      </div>
     </div>
 
   </body>
