--- a/index.html
+++ b/index.html
@@ -72,5 +72,62 @@
       </div>
     </div>
 
+    <div class="section">
+      <h2>Meilleurs cours</h2>
+      <div class="pure-u-3-24 card">
+        <div class="card-image">
+        </div>
+        <div class="card-text">
+          <p>lorem ipsum etcaetera</p>
+          <p><b>9,99€</b></p>
+        </div>
+      </div>
+      <div class="pure-u-1-24"></div>
+      <div class="pure-u-3-24 card">
+        <div class="card-image">
+        </div>
+        <div class="card-text">
+          <p>lorem ipsum etcaetera</p>
+          <p><b>9,99€</b></p>
+        </div>
+      </div>
+      <div class="pure-u-1-24"></div>
+      <div class="pure-u-3-24 card">
+        <div class="card-image">
+        </div>
+        <div class="card-text">
+          <p>lorem ipsum etcaetera</p>
+          <p><b>9,99€</b></p>
+        </div>
+      </div>
+      <div class="pure-u-1-24"></div>
+      <div class="pure-u-3-24 card">
+        <div class="card-image">
+        </div>
+        <div class="card-text">
+          <p>lorem ipsum etcaetera</p>
+          <p><b>9,99€</b></p>
+        </div>
+      </div>
+      <div class="pure-u-1-24"></div>
+      <div class="pure-u-3-24 card">
+        <div class="card-image">
+        </div>
+        <div class="card-text">
+          <p>lorem ipsum etcaetera</p>
+          <p><b>9,99€</b></p>
+        </div>
+      </div>
+      <div class="pure-u-1-24"></div>
+      <div class="pure-u-3-24 card">
+        <div class="card-image">
+        </div>
+        <div class="card-text">
+          <p>lorem ipsum etcaetera</p>
+          <p><b>9,99€</b></p>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
